versioned_docs/version-5.1/document-extensions/counters/content/_indexing-java.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

<Admonition type="note" title="">

* To index counters, create a [static index](../../../indexes/creating-and-deploying.mdx#static-indexes) 
that inherits from `AbstractCountersIndexCreationTask`.  

* Auto-indexes for counters are not available at this time.  

* In this page:  
  * [Syntax](../../../document-extensions/counters/indexing.mdx#syntax)  
  * [Querying the Index](../../../document-extensions/counters/indexing.mdx#querying-the-index)  

</Admonition>
## Syntax

In order to index counter values, create an index that inherits from `AbstractCountersIndexCreationTask`. 
Next, choose one of these two methods which take the index expression:  

<TabItem value="java" label="java">
<CodeBlock language="java">
{`protected void addMap(String map)
`}
</CodeBlock>
</TabItem>

`addMap` only indexes the counters with 
the specified name.  

Examples of indexes using the method:  

<Tabs groupId='languageSyntax'>
<TabItem value="AddMap" label="AddMap">
<CodeBlock language="java">
{`public static class MyCounterIndex extends AbstractCountersIndexCreationTask {
    public MyCounterIndex() {
        map = "counters.Companies.HeartRate.Select(counter => new {\\n" +
                "    heartBeat = counter.Value,\\n" +
                "    name = counter.Name,\\n" +
                "    user = counter.DocumentId\\n" +
                "})";
    }
}
`}
</CodeBlock>
</TabItem>
</Tabs>  



### `CounterNamesFor`

While indexes inheriting from `AbstractIndexCreationTask` cannot index counter _values_, the `counterNamesFor()` 
method is available which returns the names of all counters for a specified document:  

<Tabs groupId='languageSyntax'>
<TabItem value="CounterNamesFor" label="CounterNamesFor">
<CodeBlock language="java">
{`List<String> CounterNamesFor(Object doc);
`}
</CodeBlock>
</TabItem>
</Tabs>

Example of index using `counterNamesFor()`:  

<Tabs groupId='languageSyntax'>
<TabItem value="Index" label="Index">
<CodeBlock language="java">
{`public static class Companies_ByCounterNames extends AbstractIndexCreationTask {
    public Companies_ByCounterNames() {
        map = "from e in docs.Employees\\n" +
            "let counterNames = CounterNamesFor(e)\\n" +
            "select new\\n" +
            "{\\n" +
            "   counterNames = counterNames.ToArray()\\n" +
            "}";
    }
}
`}
</CodeBlock>
</TabItem>
</Tabs>



## Querying the Index  

<Tabs groupId='languageSyntax'>
<TabItem value="Querying" label="Querying">
<CodeBlock language="java">
{`// return all companies that have 'Likes' counter
List<Company> companies = session
    .query(Company.class, Companies_ByCounterNames.class)
    .containsAny("counterNames", Lists.newArrayList("Likes"))
    .toList();
`}
</CodeBlock>
</TabItem>

</Tabs>




