versioned_docs/version-5.2/document-extensions/counters/content/_indexing-java.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

<Admonition type="note" title="">

* To index counters, create a [static index](../../../indexes/creating-and-deploying.mdx#static-indexes) 
that inherits from `AbstractCountersIndexCreationTask` or `AbstractJavaScriptCountersIndexCreationTask`.  

* Auto-indexes for counters are not available at this time.  

* In this page:  
  * [Syntax](../../../document-extensions/counters/indexing.mdx#syntax)  
  * [AbstractJavaScriptCountersIndexCreationTask](../../../document-extensions/counters/indexing.mdx#section)  
  * [CounterNamesFor](../../../document-extensions/counters/indexing.mdx#section-1)  
  * [Querying the Index](../../../document-extensions/counters/indexing.mdx#querying-the-index)  

</Admonition>
## Syntax

In order to index counter values, create an index that inherits from `AbstractCountersIndexCreationTask`. 
Next, use these method which take the index expression:  

<TabItem value="java" label="java">
<CodeBlock language="java">
{`protected void addMap(String map)
`}
</CodeBlock>
</TabItem>

`addMap` only indexes the counters with 
the specified name.  

Examples of indexes using each method:  

<Tabs groupId='languageSyntax'>
<TabItem value="addMap" label="addMap">
<CodeBlock language="java">
{`public static class MyCounterIndex extends AbstractCountersIndexCreationTask {
    public MyCounterIndex() {
        map = "counters.Companies.HeartRate.Select(counter => new {\\n" +
                "    heartBeat = counter.Value,\\n" +
                "    name = counter.Name,\\n" +
                "    user = counter.DocumentId\\n" +
                "})";
    }
}
`}
</CodeBlock>
</TabItem>
</Tabs>  


### `AbstractJavaScriptCountersIndexCreationTask`

Creating an index inheriting from `AbstractJavaScriptCountersIndexCreationTask` allows 
you to write your map and reduce functions in JavaScript.  
Learn more about JavaScript indexes [here](../../../indexes/javascript-indexes.mdx).  

<TabItem value="java" label="java">
<CodeBlock language="java">
{`public class AbstractJavaScriptCountersIndexCreationTask extends AbstractIndexCreationTaskBase<CountersIndexDefinition> 
\{
    private final CountersIndexDefinition _definition = new CountersIndexDefinition();

    public Set<String> getMaps() \{
        return _definition.getMaps();
    \}

    public void setMaps(Set<String> maps) \{
        _definition.setMaps(maps);
    \}

    public Map<String, IndexFieldOptions> getFields() \{
        return _definition.getFields();
    \}

    public void setFields(Map<String, IndexFieldOptions> fields) \{
        _definition.setFields(fields);
    \}

    protected String getReduce() \{
        return _definition.getReduce();
    \}

    protected void setReduce(String reduce) \{
        _definition.setReduce(reduce);
    \}

    @Override
    public boolean isMapReduce() \{
        return getReduce() != null;
    \}

    /**
     * @return If not null than each reduce result will be created as a document in the specified collection name.
     */
    protected String getOutputReduceToCollection() \{
        return _definition.getOutputReduceToCollection();
    \}
\}
`}
</CodeBlock>
</TabItem>

| Property | Type | Description |
| - | - | - |
| **Maps** | `Set<String>` | The set of javascript map functions |
| **Reduce** | `String` | The javascript reduce function |

Example:  

<TabItem value="index_3" label="index_3">
<CodeBlock language="java">
{`public static class MyMultiMapCounterIndex extends AbstractJavaScriptCountersIndexCreationTask \{
    public MyMultiMapCounterIndex() \{
        setMaps(Collections.singleton("counters.map('Blogposts', 'Likes', function (counter) \{\\n" +
            "return \{\\n" +
            "    ikes: counter.Value,\\n" +
            "    name: counter.Name,\\n" +
            "    bolg post: counter.DocumentId\\n" +
            "\};\\n" +
            "\})"));
    \}
\}
`}
</CodeBlock>
</TabItem>
### `CounterNamesFor`

While indexes inheriting from `AbstractIndexCreationTask` cannot index counter _values_, the `counterNamesFor` 
method is available which returns the names of all counters for a specified document:  

<TabItem value="syntax" label="syntax">
<CodeBlock language="java">
{`List<String> counterNamesFor(Object doc);
`}
</CodeBlock>
</TabItem>

Example of index using `counterNamesFor`:  

<TabItem value="index_0" label="index_0">
<CodeBlock language="java">
{`public static class Companies_ByCounterNames extends AbstractIndexCreationTask \{
    public Companies_ByCounterNames() \{
        map = "from e in docs.Employees\\n" +
            "let counterNames = counterNamesFor(e)\\n" +
            "select new\\n" +
            "\{\\n" +
            "   counterNames = counterNames.ToArray()\\n" +
            "\}";
    \}
\}
`}
</CodeBlock>
</TabItem>



## Querying the Index  

<TabItem value="query1" label="query1">
<CodeBlock language="java">
{`// return all companies that have 'Likes' counter
List<Company> companies = session
    .query(Company.class, Companies_ByCounterNames.class)
    .containsAny("counterNames",  Arrays.asList("companies_likes"))
    .selectFields(Company.class, "likes")
    .toList();
`}
</CodeBlock>
</TabItem>




